js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-assignment-expression-import-source-no-rest-param.js
DONOTEVALUATE
(
)
;
let
f
=
(
)
=
>
import
.
source
(
.
.
.
[
'
<
module
source
>
'
]
)
;
